# parrt-bytecode

./: CMakeLists.txt
src/: vm.c  wrun.c
test/: test_core.c  test_funcs.c
